@@ -10,6 +10,8 @@ BeeBEEP 3.0.8
 - "Signature" option added in beebeep.rc file
 - "Open folder" link (shown after a file transferred) also highlight the selected file in the folder (only for windows and macosx)
 - "UseOnlyTextEmoticons" option added in beebeep.rc file
+- Fixed a bug on smart selection of the data folder (now if the application folder is not writeable, BeeBEEP save its data to UserAppData folder)
+- Users can be sorted in ascending or descending order, by name, by status, by unread messages and by priority (default)
 
 BeeBEEP 3.0.7
 - ShareBox: new feature in beta (can share files like dropbox with all users connected)
